--- a/content/posts/コーポレイト制作.md
+++ b/content/posts/コーポレイト制作.md
@@ -2,7 +2,7 @@
 title: コーポレイト制作
 subtitle: wordpress制作とクレジットカード決済導入作業
 category:
-  - wordpress
+  - WordPress
 author: aya
 date: 2020-06-15T14:11:31.614Z
 featureImage: /uploads/スクリーンショット-2020-06-15-23.14.14.png
