Update Posts “コーポレートサイト制作”

--- a/content/posts/コーポレートサイト制作.md
+++ b/content/posts/コーポレートサイト制作.md
@@ -2,7 +2,7 @@
 title: コーポレートサイト制作
 subtitle: wordpress案件 静的コーディング〜wordpress設計・組み込み/公開まで担当
 category:
-  - wordpress
+  - WordPress
 author: aya
 date: 2020-06-14T08:08:05.791Z
 featureImage: /uploads/スクリーンショット-2020-06-15-22.40.58.png
