--- a/content/posts/特集ページ.md
+++ b/content/posts/特集ページ.md
@@ -2,7 +2,7 @@
 title: 特集ページ
 subtitle: 某サイトにおける特集ページをコーディング
 category:
-  - wordpress
+  - 静的コーディング
 author: aya
 date: 2020-06-17T09:45:19.647Z
 featureImage: /uploads/ana_furusato.jpg
