Update Posts “クイズ”

--- a/content/posts/クイズ.md
+++ b/content/posts/クイズ.md
@@ -35,4 +35,14 @@ webpack/gulp4/Git(GitHub使用)
 1. タブレットは数台を使い回します。お客さん達が答えを教え合わないように、毎回シャッフル処理をしています。　　
 2. ES6以降のJavaScriptを意識してコーディングしています。
 
-# サンプル画像
+# クイズ①サンプル画像
+
+![choice](/uploads/スクリーンショット-2020-06-21-17.03.32.png "choice")
+
+![choice](/uploads/スクリーンショット-2020-06-21-17.04.37.png "choice")
+
+# クイズ②サンプル画像
+
+![choice](/uploads/スクリーンショット-2020-06-21-17.10.30.png "choice")
+
+![choice](/uploads/スクリーンショット-2020-06-21-17.10.38.png "choice")
