Update Posts “コーポレイト制作”

--- a/content/posts/コーポレイト制作.md
+++ b/content/posts/コーポレイト制作.md
@@ -12,8 +12,10 @@ featureImage: /uploads/スクリーンショット-2020-06-15-23.14.14.png
 # 概要
 
 ・新規案件 ・静的7P お問い合わせ(3種類)
-・【静的コーディング】2週間程度 【Wordpress組み込み+外部クレジットカード決済代行サービス導入作業】2週間程度
-・全て担当
+・【静的コーディング】2週間程度   
+
+・【Wordpress組み込み+外部クレジットカード決済代行サービス導入作業】2週間程度  
+
 
 # 開発環境
 
