Update Posts “特集ページ”

--- a/content/posts/特集ページ.md
+++ b/content/posts/特集ページ.md
@@ -8,9 +8,10 @@ date: 2020-06-17T09:45:19.647Z
 featureImage: /uploads/ana_furusato.jpg
 ---
 # 概要
-`https://furusato.ana.co.jp/feature/list001_v3.html`   
-・継続案件（約1年ほど）   
-・静的1P  
+
+`https://furusato.ana.co.jp/feature/list001_v3.html`\
+・継続案件（約1年ほど）\
+・静的1P\
 ・ベースを作成してテキストのみを差し替えています
 
 # 使用した技術
@@ -25,10 +26,11 @@ featureImage: /uploads/ana_furusato.jpg
 
 1.ユーザーが集中して閲覧できるように工夫 
 →アンカータブとページ下部スライダーサムネイルを連携させています。スライダープラグイン(slick)をカスタマイズして、ユーザーが現在閲覧しているものに集中できるようにしています。
-2. 長いページのため、ユーザーの現在地を示す工夫  
-それぞれのセクションごとにリンクボタンがついています。\
-   クライアントが別タブ遷移希望されていなかった為、ページ遷移後ブラウザバックをしても、最後に見ていた位置に戻ることができます。　　
-3. 更新性を高める  
-→同じモジュールの繰り返しのため、オブジェクトにまとめて出力させています。タブの切り替えをトリガーにして、画像とテキストを入れ替えています。
+
+2. 長いページのため、ユーザーの現在地を示す工夫  \
+   それぞれのセクションごとにリンクボタンがついています。\
+      クライアントが別タブ遷移希望されていなかった為、ページ遷移後ブラウザバックをしても、最後に見ていた位置に戻ることができます。  　　
+3. 更新性を高める\
+   →同じモジュールの繰り返しのため、オブジェクトにまとめて出力させています。タブの切り替えをトリガーにして、画像とテキストを入れ替えています。
 
 セクションイメージ ![image](/uploads/furusato.ana.co.jp_feature_list001_v3.html.png "section")
